# baixa-cnpj

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-22-guided-options-and-folder-picker.md  2026-06-22-technical-panel-redesign.md
docs/superpowers/specs/: 2026-06-22-guided-options-and-folder-picker.md  2026-06-22-technical-panel-redesign.md
rf_cnpj/: __init__.py  __main__.py  cli.py
rf_cnpj/api/: __init__.py  app.py  jobs.py
rf_cnpj/app/: __init__.py
rf_cnpj/core/: __init__.py  cleanup.py  downloader.py  events.py  extractor.py  file_dialog.py  models.py  month_discovery.py  municipios_rf.py  normalization.py  output.py  processor.py  schemas.py  ui_options.py
rf_cnpj/engines/: __init__.py  pandas_engine.py
tests/: test_api.py  test_extractor_cleanup_downloader.py  test_file_dialog.py  test_module_entrypoint.py  test_month_cli_app.py  test_normalization.py  test_output.py  test_pandas_engine.py  test_processor.py  test_schemas.py
web/: package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: pipeline-console.tsx
web/src/lib/: api.ts
