[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-cnpj"
version = "0.1.0"
description = "Pipeline local para baixar, cruzar e exportar bases públicas de CNPJ da Receita Federal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
rf-cnpj = "rf_cnpj.cli:main"

[tool.setuptools.packages.find]
include = ["rf_cnpj*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
